--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.10.1",
     "@types/react-redux": "7.1.9",
     "@types/redux": "3.6.0"
   }
